# Face-Recognition

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py  audit.py  auth.py  consent.py  faces.py  logs.py  recognize.py  users.py
app/application/: services.py
app/core/: auth.py  config.py  security.py
app/database/: models.py
app/domain/: entities.py
app/presentation/: schemas.py
docker/: Dockerfile  docker-compose.yml
face_api/: .env.example  Dockerfile  README.md  requirements.txt
face_api/app/: __init__.py  config.py  dependencies.py  main.py  schemas.py  websocket_manager.py
face_api/tests/: conftest.py  test_endpoints.py
face_db/: .env.example  README.md  __init__.py  alembic.ini  database.py  docker-compose.yml  models.py  repository.py  requirements.txt  seed_data.py  test_db_pipeline.py
face_db/alembic/: env.py
face_pipeline/: README.md  __init__.py  config.yaml  enroll.py  evaluate.py  main.py  matcher.py  requirements.txt
face_pipeline/detectors/: __init__.py  base.py  haar_detector.py  mtcnn_detector.py  yolov8_detector.py
face_pipeline/embedders/: __init__.py  arcface_embedder.py  base.py  dlib_embedder.py  facenet_embedder.py
face_pipeline/test_data/: README.txt
migrations/: env.py
migrations/versions/: a1b2c3d4e5f6_encrypt_face_embeddings.py  e513729df8ea_initial_schema.py
scripts/: calibrate_threshold.py  create_admin.py  init_db.py  make_migration.py
src/application/: capture_images.py  manage_users.py  recognize.py  register_user.py  train_model.py
src/core/: __init__.py
src/face_recognition_system/: __init__.py  main.py
src/infrastructure/: camera_adapter.py  embedding_storage.py  face_recognition_engine.py  logging_config.py  sqlite_repository.py
src/presentation/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_application.py  test_domain.py  test_infrastructure.py
tests/e2e/: test_scenarios.py
(+47 files in other folders)
